# FinBot

./: README.md  agent (1).py  agent.py  app (2).py  doc_processing (1).py  doc_processing.py  pyproject.toml  requirements.txt  test_app.py  tool_list (1).py  tool_list.py
